# saev

./: .gitignore  CONTRIBUTING.md  CONVENTIONS.md  MLP_analysis.py  README.md  analysis.py  feature_vis.py  generate_app_data.py  gpt2_resid_pre10_predict_pronoun_feature.html.REMOVED.git-id  initial_sae_training_test.py  justfile  llms.txt  load_sae_images_acts.py  logbook.md  main.py  neuron_alignment.ipynb.REMOVED.git-id  neuron_alignment.py  ppt_presentation.py  pyproject.toml  related-work.md  requirements.txt  sae_activations_on_inputs.py  sae_on_inputs.ipynb.REMOVED.git-id  save_feature_data.py  saved_sae_evals.py  scatter_plots.ipynb.REMOVED.git-id  sparsity_histogram.ipynb.REMOVED.git-id  stable_diffusion.py  streamlit_multiple_test.py  streamlit_test.py  text_explanation.py  todo.md  training_sae_on_ViT.py  vocab_dict.json  web_app.py  webapp.py  webapp_mo.py
artifacts/sparse_autoencoder_gpt2-small_blocks.10.hook_resid_pre_6144:v2/: 1200001024_sparse_autoencoder_gpt2-small_blocks.10.hook_resid_pre_6144.pt.REMOVED.git-id
configs/: baseline.toml
configs/preprint/: baseline.toml  classification.toml  dumbest.toml
contrib/classification/: __init__.py  __main__.py  app.py  config.py  download_caltech101.py  download_cub.py  download_flowers.py  interactive.py  reproduce.md  sweep.toml  training.py  transforms.py
contrib/faithfulness/: README.md
contrib/mae/: __init__.py  modeling.py
contrib/mllm/: reproduce.md
contrib/semprobe/: __main__.py  config.py  reproduce.md
contrib/semseg/: __init__.py  __main__.py  app.py  config.py  dashboard.py  dashboard2.py  interactive.py  key.md  quantitative.py  reproduce.md  sweep.toml  training.py  validation.py  (+1 more)
docs/: index.html  llms.txt  main.css
faithfulness/: dashboard.py
notebooks/: broden.py  plots.py  tables.py
probing/: __init__.py  __main__.py  config.py  description.md  dump_topk.py  logbook.py
research/: run.ipynb.REMOVED.git-id
sae_analysis/: dashboard_runner.py
sae_training/: activations_store.py  config.py  hooked_vit.py  lm_runner.py  sparse_autoencoder.py  timeit.py  toy_model_runner.py  toy_models.py  train_sae_on_language_model.py  train_sae_on_toy_model.py  train_sae_on_vision_transformer.py  training.py  utils.py  vit_activations_store.py  vit_runner.py
saev/: __init__.py  __main__.py  activations.py  activations_store.py  analysis.py  app.py  broden.py  colors.py  config.py  cub2011.py  guide.md  helpers.py  histograms.py  hooked_vit.py  imagenet1k.py  imaging.py  inference.md  modeling.py  nn.py  preprint.md  reproduce.md  sparse_autoencoder.py  sweep.py  test_activations.py  test_config.py  test_nn.py  test_training.py  test_visuals.py  test_webapp.py  training.py  utils.py  vision_models.py  visuals.py  vits.py  webapp.py
scripts/: deploy.py  docs.py  gradcam.py  make_figures.py  push_models.py  sync.py
tutorials/: evaluating_your_sae.ipynb  evaluating_your_sae.ipynb.REMOVED.git-id  vocab_dict.json
vit_sae_analysis/: dashboard_fns.py
web/: elm.json  tailwind.config.js
(+128 files in other folders)
